@startuml
' ER completo (versión compacta para visualización cercana)
left to right direction
skinparam dpi 72
skinparam shadowing false
skinparam linetype ortho
skinparam defaultFontName "Arial"
skinparam entityFontSize 10
skinparam entityPadding 4
skinparam entityAttributeFontSize 9
skinparam nodesep 20
skinparam ranksep 24
skinparam packagePadding 6
skinparam roundcorner 6

' Agrupamos las tablas en 3 columnas para un layout compacto
together {
	package "Columna Izq" {
		entity usuarios
		entity pagos
		entity gastos
		entity logs_sistema
		entity importaciones_savar
	}
}

together {
	package "Columna Centro" {
		entity rutas
		entity paquetes
		entity ruta_paquetes
		entity entregas
		entity paquetes_rezagados
		entity ingresos
		entity caja_chica
	}
}

together {
	package "Columna Der" {
		entity zonas_tarifas
		entity notificaciones
		entity notificaciones_whatsapp
		entity importaciones_archivos
		entity alertas_entrega
		entity logs_whatsapp
		entity ubicaciones_tiempo_real
	}
}

' Relaciones (FKs principales extraídas de install_complete.sql)
usuarios ||--o{ paquetes
zonas_tarifas ||--o{ paquetes
usuarios ||--o{ rutas
rutas ||--o{ ruta_paquetes
paquetes ||--o{ ruta_paquetes
paquetes ||--o{ entregas
rutas ||--o{ entregas
usuarios ||--o{ entregas
paquetes ||--o{ paquetes_rezagados
usuarios ||--o{ pagos
paquetes ||--o{ ingresos
usuarios ||--o{ ingresos
usuarios ||--o{ gastos
usuarios ||--o{ ubicaciones_tiempo_real
rutas ||--o{ ubicaciones_tiempo_real
usuarios ||--o{ notificaciones
usuarios ||--o{ logs_sistema
usuarios ||--o{ importaciones_savar
usuarios ||--o{ importaciones_archivos
usuarios ||--o{ caja_chica
paquetes ||--o{ notificaciones_whatsapp
paquetes ||--o{ alertas_entrega
usuarios ||--o{ alertas_entrega
paquetes ||--o{ logs_whatsapp

' Pistas invisibles para compactar y alinear columnas
usuarios -[hidden]-> rutas
ruta_paquetes -[hidden]-> paquetes
entregas -[hidden]-> paquetes
paquetes -[hidden]-> zonas_tarifas
ingresos -[hidden]-> caja_chica
notificaciones -[hidden]-> notificaciones_whatsapp
importaciones_savar -[hidden]-> importaciones_archivos

note bottom
Versión compacta del ER generada a partir de `database/install_complete.sql`.
end note

@enduml
